UX: Fixed solved alignment with buttons due to core changes (#120)

--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -10,11 +10,6 @@ $solved-color: green;
   }
 }
 
-.post-controls span:not(.d-button-label) {
-  display: inline-flex;
-  align-items: baseline;
-}
-
 .fa.accepted {
   color: $solved-color;
 }
